Link and Formatting Updates

--- a/data/songs/medi.mdx
+++ b/data/songs/medi.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Meditations of a Rockstar'
-published: 'true'
+published: 'false'
 type: 'single'
 artist: 'Jacobs Blue'
 written: 'J. Medure'
