Meditations Work + Accessibility Updates

--- a/data/articles/making-perfume.mdx
+++ b/data/articles/making-perfume.mdx
@@ -1,34 +1,26 @@
 ---
-title: 'Making perfume'
+title: Tomorrow, I'm allowed to love orchids.
 date: '2022-07-12'
-description: 'An ode to my method.'
+description: ' '
 thumbnailUrl: '/tailwindcss-thumbnail.jpg'
 tags: ['tailwindcss', 'styling']
-image: '/logo.png'
+image: ''
 alt: 'gif'
-lastEdited: '2022-07-12'
+lastEdited: '2022-09-20'
 ---
 
-<br />
+I listened to [Simone Giertz](https://youtube.com) talk about how she tells herself that if she wakes up tomorrow and thinks “orchids… I love orchids and I just need to make orchid videos,” she’ll just do that and that’s okay. she creates silly machines on YouTube, 
 
-## Hello my boi
+She is super successful YouTube with an amazing career by many standards yet she tells herself she doesn’t have to do it. I’m sure that helps her create from a place of pure curiosity more often than not.
 
-- yes
-- yes
-- buy
+I believe because *I don’t do this well*. I often feel like my discipline and creativity are at odds. Somedays I feel like I have to do music, although that keeps me sharp, I don’t think it’s always keeping my creation light or fun. It can feel heavy, stuffy, forced.
 
-### This is a Markdown sub-heading
+>I’m freeing myself today. I no longer *have* to make music. I no longer *have* to make anything. It is okay if I don’t make it in music.
 
-We just used a `###` subheading in our blog post.
+Although I’m not sure I believe myself although I do believe that freeing myself from having to do anything will allow me to listen more intently to that which peaks my curiosity. And hopefully the things that peak my curiosity will be explored with renewed fervor and wonder.
 
-```
-  // this is a code block
-  const doSomething = () => {
-    return console.log('hey')
-  }
-```
+When you something so bad it can be difficult to remember the pure nature of why you started in the first place. Pure creativity, wonder, curiosity and joy are the vectors by which great things are made.
 
-<div>
-  Here, I'm using a component inside my MarkDown file:{' '}
-  {/* {<Button text={'Click me'} />} */}
-</div>
+Charles Darwin apparently wrote an entire book on orchids, funny enough. Justin Vernon of Bon Iver didn’t reach make it in music until he had given up “making it.”
+
+If Simone, Charles, Justin can free themselves from the pressures that come from forcing creativity, I can too.
