--- a/misc_pages/quotes.mdx
+++ b/misc_pages/quotes.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'My favorite quotes'
 date: '2022-04-16'
-description: ''
+description: 'A page about my favorite quotes of all time'
 lastEdited: '2022-05-24'
 ---
 
