--- a/data/articles/creative-constraints.mdx
+++ b/data/articles/creative-constraints.mdx
@@ -1,12 +1,14 @@
 ---
-title: 'SolidJS: A Beginners Guide'
-date: '2021-10-16'
-description: "Here's an introduction to SolidJS"
-thumbnailUrl: '/solidjs-thumbnail.jpeg'
-tags: ['JavaScript', 'solidjs']
-image: '/1.gif'
-alt: 'gif'
+date: '2023-10-23'
 lastEdited: '2022-05-24'
+title: 'On Creative Constraints'
+description: "Creative contraints throughout the creative process in the pursuit of mastery"
+thumbnailUrl: '/solidjs-thumbnail.jpeg'
+tags: []
+image: '/1.gif'
+youtube: ''
+alt: 'gif'
+isPublished: 'false'
 ---
 
 <div>
