--- a/data/articles/creative-constraints.mdx
+++ b/data/articles/creative-constraints.mdx
@@ -3,7 +3,7 @@ date: '2023-10-23'
 lastEdited: '2022-05-24'
 title: 'On Creative Constraints'
 description: "Creative contraints throughout the creative process in the pursuit of mastery"
-thumbnailUrl: '/solidjs-thumbnail.jpeg'
+thumbnail: '/1.gif'
 tags: []
 image: '/1.gif'
 youtube: ''
