--- a/data/articles/maybe-i-give-up.mdx
+++ b/data/articles/maybe-i-give-up.mdx
@@ -3,10 +3,10 @@ date: '2022-11-07'
 lastEdited: '2022-11-07'
 title: 'Maybe I give up.'
 description: "670 days since I released music."
-thumbnailUrl: '/migu.jpg'
+thumbnail: '/miguThumb.png'
 tags: []
 image: ''
-youtube: 'XxKCaopsQc'
+youtube: '_XxKCaopsQc'
 alt: 'gif'
 isPublished: 'true'
 ---
