--- a/data/songs/maybe-i-give-up.mdx
+++ b/data/songs/maybe-i-give-up.mdx
@@ -3,7 +3,7 @@ title: 'Maybe I give up.'
 published: 'true'
 type: 'single'
 artist: 'Jacobs Blue'
-written: 'J. Medure + A. Maxey'
+written: 'J. Medure, A. Maxey'
 produced: 'J. Medure'
 released: '2022-11-06'
 album: ''
@@ -26,7 +26,7 @@ links:
 # Lyrics
 
 Baby I    
-Think too much sometimes 
+Think too much sometimes   
 Lay me down    
 And make me holy    
 I care too much   
@@ -71,7 +71,8 @@ Take it slowly
   </div>
    <div className="credit flex-auto flex-grow">
     <h4>written</h4>
-    <p>Jacob Medure + Ashton Maxey</p>
+    <p>Jacob Medure</p>
+    <p>Ashton Maxey</p>
   </div>
   {/* <div className="credit flex-auto flex-grow">
     <h4>Mixed</h4>
@@ -87,7 +88,7 @@ Take it slowly
   </div>
   <div className="credit flex-auto flex-grow">
     <h4>published</h4>
-    <p>LIVEINEVERYNOW. Records</p>
+    <p>LIVEINEVERYNOW. Records, LLC</p>
   </div>
   <div className="credit flex-auto flex-grow">
     <h4>released</h4>
@@ -95,6 +96,6 @@ Take it slowly
   </div>
   <div className="credit flex-auto flex-grow">
     <h4>thanks + additional credits</h4>
-    <p>Will Hanlen, Dean Maola, Zeke Mishanec, GVosti, Ashton Maxey, Gena Wachendorfer and Alex Estevez</p>
+    <p>Gena Wachendorfer, Ashton Maxey, Dean Maola, Zeke Mishanec, Gina Vosti and Alex Estevez</p>
   </div>
 </div>
