--- a/data/songs/maybe-i-give-up.mdx
+++ b/data/songs/maybe-i-give-up.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Maybe I give up.'
+title: 'Maybe I give up'
 published: 'true'
 type: 'single'
-artist: 'Jacob''s Blue'
+artist: "Jacob's Blue"
 written: 'J. Medure, A. Maxey'
 produced: 'J. Medure'
 released: '2022-11-06'
@@ -18,49 +18,47 @@ links:
     'https://open.spotify.com/album/3uVdTPnjj6XZOIOdsDOVbj',
     'https://music.apple.com/us/album/maybe-i-give-up-single/1650241425',
     'https://www.youtube.com/watch?v=-YRv-ewXaTE&list=OLAK5uy_nBVFxCpmNUZ9FDGh-P2F5COn150QxsRak',
-    "https://music.amazon.com/albums/B0BJFKV3W5?marketplaceId=ATVPDKIKX0DER&musicTerritory=US&ref=dm_sh_zkIb3EAjrNLNEyxy7fNXVMajQ&trackAsin=B0BJFLQKK8",
+    'https://music.amazon.com/albums/B0BJFKV3W5?marketplaceId=ATVPDKIKX0DER&musicTerritory=US&ref=dm_sh_zkIb3EAjrNLNEyxy7fNXVMajQ&trackAsin=B0BJFLQKK8',
     'https://tidal.com/browse/album/254556437',
   ]
 ---
 
 # Lyrics
 
-Baby I    
-Think too much sometimes   
-Lay me down    
-And make me holy    
-I care too much   
-Something’s got me down   
-But maybe I’ll   
-Take it slowly   
- 
-My fears unfolding   
-My weakness growing   
-These walls keep closing   
-But eyes stay [open]   
+Baby I  
+Think too much sometimes  
+Lay me down  
+And make me holy  
+I care too much  
+Something’s got me down  
+But maybe I’ll  
+Take it slowly
 
-Maybe I need to whip the foreign   
-Maybe I’m built for something more and   
-I don’t know where my life is going   
-What if I die tomorrow night   
-Maybe I   
+My fears unfolding  
+My weakness growing  
+These walls keep closing  
+But eyes stay [open]
 
-Maybe its me I’m reaching for and   
-Maybe there’s peace in what’s before me   
-Maybe my feet keep moving forward   
-Just need a moment   
+Maybe I need to whip the foreign  
+Maybe I’m built for something more and  
+I don’t know where my life is going  
+What if I die tomorrow night  
+Maybe I
 
-Oh   
-Baby I    
-Think too much sometimes   
-Lay me down   
-And make me holy   
-I care too much    
-Something’s got me down   
-But maybe I’ll   
-Take it slowly   
+Maybe its me I’m reaching for and  
+Maybe there’s peace in what’s before me  
+Maybe my feet keep moving forward  
+Just need a moment
 
-
+Oh  
+Baby I  
+Think too much sometimes  
+Lay me down  
+And make me holy  
+I care too much  
+Something’s got me down  
+But maybe I’ll  
+Take it slowly
 
 ## Credits
 
@@ -69,7 +67,7 @@ Take it slowly
     <h4>produced + mixed + mastered</h4>
     <p>Jacob Medure</p>
   </div>
-   <div className="credit flex-auto flex-grow">
+  <div className="credit flex-auto flex-grow">
     <h4>written</h4>
     <p>Jacob Medure</p>
     <p>Ashton Maxey</p>
@@ -96,6 +94,9 @@ Take it slowly
   </div>
   <div className="credit flex-auto flex-grow">
     <h4>thanks + additional credits</h4>
-    <p>Gena Wachendorfer, Ashton Maxey, Dean Maola, Zeke Mishanec, Gina Vosti and Alex Estevez</p>
+    <p>
+      Gena Wachendorfer, Ashton Maxey, Dean Maola, Zeke Mishanec, Gina Vosti and
+      Alex Estevez
+    </p>
   </div>
 </div>
