Links, Images, Etc

--- a/data/songs/born-in-the-sunset-thoughts-to-oasis.mdx
+++ b/data/songs/born-in-the-sunset-thoughts-to-oasis.mdx
@@ -1,16 +1,16 @@
 ---
 title: 'Born in the Sunset: Thoughts to Oasis'
+published: 'true'
 type: 'album'
 artist: "Jacob's Blue"
-produced: 'J. Medure'
 written: 'J. Medure'
-published: 'true'
-description: 'An album about the sunset'
+produced: 'J. Medure'
 released: '2020-12-31'
 album: 'Born in the Sunset: Thoughts to Oasis'
-track: '0'
 albumLink: ' '
-artwork: 'https://login.lyricallemonade.com/wp-content/uploads/BITSCover1-scaled.jpg'
+description: 'An album about the sunset'
+track: ' '
+artwork: '/BITS.jpeg'
 alt: 'song-art'
 spotifyEmbed: 'album/3nAER17uMf2QOuJwSCIOJB'
 links:
@@ -142,7 +142,10 @@ links:
   </div>
   <div className="credit flex-auto flex-grow">
     <h4>thanks + additional credits</h4>
-    <p>Will Hanlen, Dean Maola, Zeke Mishanec, GVosti, Ashton Maxey and Robin Lemmerz</p>
+    <p>
+      Will Hanlen, Dean Maola, Zeke Mishanec, GVosti, Ashton Maxey and Robin
+      Lemmerz
+    </p>
   </div>
 </div>
 
