--- a/data/songs/down-the-hill.mdx
+++ b/data/songs/down-the-hill.mdx
@@ -2,7 +2,7 @@
 title: 'Down the Hill'
 published: 'true'
 type: 'song'
-artist: 'Jacob''s Blue'
+artist: "Jacob's Blue"
 written: 'J. Medure'
 produced: 'J. Medure'
 released: '2020-12-31'
@@ -10,7 +10,7 @@ album: 'Born in the Sunset: Thoughts to Oasis'
 albumLink: 'born-in-the-sunset-thoughts-to-oasis'
 description: ' '
 track: '2'
-artwork: 'https://login.lyricallemonade.com/wp-content/uploads/BITSCover1-scaled.jpg'
+artwork: '/BITS.jpeg'
 alt: 'song-art'
 spotifyEmbed: 'track/4z4Cb8PdITMfaBYhKiu5fn'
 links:
@@ -33,8 +33,8 @@ I'm sorry
 I'm lost  
 I need you right beside me  
 At most, we barely got to climb it  
-Great heights when I'm in touch with you  
-  
+Great heights when I'm in touch with you
+
 Hook:  
 I'm down every hill till I'm home  
 I spend my time thinking bout' you  
@@ -42,8 +42,8 @@ Down to stay right here, just to keep you warm
 To fast for me to catch ya, headed  
 Down the hill and I'm not alone  
 I'm mean I'm down the hill just to see you go  
-But baby please don't  
-  
+But baby please don't
+
 Verse 2:  
 Save your discussion  
 These problems started from trust and  
@@ -54,7 +54,6 @@ When I'm just tryna be something
 I spill my guts on percussion and worry about my fucking self  
 About my fucking self  
 About my fucking [BLEEP]
-
 
 ## Credits
 
@@ -73,7 +72,10 @@ About my fucking [BLEEP]
   </div>
   <div className="credit flex-auto flex-grow">
     <h4>recorded at</h4>
-    <p>The Backwood Apartment, Flushing, NY, and Charlie's Closet, Jacksonville, FL</p>
+    <p>
+      The Backwood Apartment, Flushing, NY, and Charlie's Closet, Jacksonville,
+      FL
+    </p>
   </div>
   <div className="credit flex-auto flex-grow">
     <h4>published</h4>
@@ -85,6 +87,9 @@ About my fucking [BLEEP]
   </div>
   <div className="credit flex-auto flex-grow">
     <h4>thanks + additional credits</h4>
-    <p>Will Hanlen, Dean Maola, Zeke Mishanec, GVosti, Ashton Maxey and Robin Lemmerz</p>
+    <p>
+      Will Hanlen, Dean Maola, Zeke Mishanec, GVosti, Ashton Maxey and Robin
+      Lemmerz
+    </p>
   </div>
 </div>
