--- a/data/songs/knew-better.mdx
+++ b/data/songs/knew-better.mdx
@@ -2,7 +2,7 @@
 title: 'Knew Better'
 published: 'true'
 type: 'song'
-artist: 'Jacob''s Blue'
+artist: "Jacob's Blue"
 written: 'J. Medure'
 produced: 'J. Medure'
 released: '2020-12-31'
@@ -10,7 +10,7 @@ album: 'Born in the Sunset: Thoughts to Oasis'
 albumLink: 'born-in-the-sunset-thoughts-to-oasis'
 track: '3'
 description: ' '
-artwork: 'https://login.lyricallemonade.com/wp-content/uploads/BITSCover1-scaled.jpg'
+artwork: 'https://file.notion.so/f/s/aa8782a2-7db7-447e-adee-8bfa273e5607/BITSCover1-scaled_(1).jpeg?id=8e18b7a8-a3d1-4371-b3c5-ee544cf9567c&table=block&spaceId=2afffdaa-a1f9-48fc-8af5-a4f4e2aaefbf&expirationTimestamp=1684092207684&signature=IsytBC8rHIB_sPF9O9B25QotIWv1tXoqgEvVKhMEens&downloadName=BITSCover1-scaled+%281%29.jpeg'
 alt: 'song-art'
 spotifyEmbed: 'track/3gpCWNwTX0wp2lWUwJLrWC'
 links:
@@ -33,15 +33,15 @@ Don't think I'm over it
 Prolly' find a bitch like you  
 So she won't stab in the motherfuckin side, you  
 Make everything about you it's so hard to  
-Not feel anything  
+Not feel anything
 
 Pre-Chorus:  
 Well I can't be the one to love you, babe  
 I gave you everything until you fucking left  
 I hope you're happier than me these days  
 'Cause I feel so fucking numb  
-Bitch I don't got nothing left!  
-  
+Bitch I don't got nothing left!
+
 Hook:  
 And no it's not fair!  
 That you're not here!  
@@ -50,8 +50,8 @@ Then to give my heart away!
 And no it's not fair!  
 That you're not here!  
 All in my head  
-'Cause I loved someone!  
-  
+'Cause I loved someone!
+
 Verse 2:  
 Listen, how'd you do it babe?  
 How'd you throw us all away?  
@@ -64,15 +64,15 @@ Mean it's hard enough to say
 Doesn't mean I don't feel you still  
 Didn't you see my face?  
 I don't believe you, doll  
-Now I cannot believe at all  
-  
+Now I cannot believe at all
+
 Pre-Chorus:  
 Well I can't be the one to love you, babe  
 I gave you everything until you fucking left  
 I hope you're happier than me these days  
 'Cause I feel so fucking numb  
-Bitch I don't got nothing left!  
-  
+Bitch I don't got nothing left!
+
 Hook:  
 And no it's not fair!  
 That you're not here!  
@@ -81,7 +81,7 @@ Then to give my heart away!
 And no it's not fair!  
 That you're not here!  
 All in my head  
-'Cause I loved someone!  
+'Cause I loved someone!
 
 ## Credits
 
