--- a/data/songs/i-cant-shake-you.mdx
+++ b/data/songs/i-cant-shake-you.mdx
@@ -2,7 +2,7 @@
 title: "(I can't)\ Shake You"
 published: 'true'
 type: 'song'
-artist: 'Jacob''s Blue'
+artist: "Jacob's Blue"
 written: 'J. Medure'
 produced: 'J. Medure'
 released: '2020-12-31'
@@ -10,7 +10,8 @@ album: 'Born in the Sunset: Thoughts to Oasis'
 albumLink: 'born-in-the-sunset-thoughts-to-oasis'
 track: '4'
 description: ' '
-artwork: 'https://login.lyricallemonade.com/wp-content/uploads/BITSCover1-scaled.jpg'
+artwork: 'https://file.notion.so/f/s/aa8782a2-7db7-447e-adee-8bfa273e5607/BITSCover1-scaled_(1).jpeg?id=8e18b7a8-a3d1-4371-b3c5-ee544cf9567c&table=block&spaceId=2afffdaa-a1f9-48fc-8af5-a4f4e2aaefbf&expirationTimestamp=1684092207684&signature=IsytBC8rHIB_sPF9O9B25QotIWv1tXoqgEvVKhMEens&downloadName=BITSCover1-scaled+%281%29.jpeg'
+
 alt: 'song-art'
 spotifyEmbed: 'track/02zaOEskC1ZBsmHkx6I3Bm'
 links:
@@ -31,7 +32,7 @@ Even though I want to
 Even though I want to  
 I can't shake you  
 Even though I want to  
-Even though I want to  
+Even though I want to
 
 ## Credits
 
