--- a/data/songs/on-my-pixies-shit.mdx
+++ b/data/songs/on-my-pixies-shit.mdx
@@ -2,7 +2,7 @@
 title: 'On My Pixies Shit'
 published: 'true'
 type: 'song'
-artist: 'Jacob''s Blue'
+artist: "Jacob's Blue"
 written: 'J. Medure'
 produced: 'J. Medure'
 released: '2020-12-31'
@@ -10,7 +10,7 @@ album: 'Born in the Sunset: Thoughts to Oasis'
 albumLink: 'born-in-the-sunset-thoughts-to-oasis'
 track: '6'
 description: ' '
-artwork: 'https://login.lyricallemonade.com/wp-content/uploads/BITSCover1-scaled.jpg'
+artwork: 'https://file.notion.so/f/s/aa8782a2-7db7-447e-adee-8bfa273e5607/BITSCover1-scaled_(1).jpeg?id=8e18b7a8-a3d1-4371-b3c5-ee544cf9567c&table=block&spaceId=2afffdaa-a1f9-48fc-8af5-a4f4e2aaefbf&expirationTimestamp=1684092207684&signature=IsytBC8rHIB_sPF9O9B25QotIWv1tXoqgEvVKhMEens&downloadName=BITSCover1-scaled+%281%29.jpeg'
 alt: 'song-art'
 spotifyEmbed: 'track/7tNHEt5SMDrUtxHyLiyjR9'
 links:
@@ -29,8 +29,8 @@ Hook:
 Ooooh Yeah  
 Ooooh Yeah Hey  
 Ooooh Yeah  
-Ooooh Yeah Hey  
-  
+Ooooh Yeah Hey
+
 Verse:  
 Besides  
 The fact you're everywhere I go  
@@ -43,14 +43,13 @@ I mean another song I wrote about you
 Where I blame myself again  
 I can't pretend  
 I'm not losing you and losing it  
-But you're right here  
-  
+But you're right here
+
 At least for right now  
 I didn't want to walk away, did you?  
 Oooh Yeah eh Yeah AH!  
 I didn't want to walk away, did you?  
-Oh Yeah  
-
+Oh Yeah
 
 ## Credits
 
