--- a/data/songs/two-yellow-birds.mdx
+++ b/data/songs/two-yellow-birds.mdx
@@ -2,7 +2,7 @@
 title: 'Two Yellow Birds'
 published: 'true'
 type: 'song'
-artist: 'Jacob''s Blue'
+artist: "Jacob''s Blue"
 written: 'J. Medure'
 produced: 'J. Medure'
 released: '2020-12-31'
@@ -10,7 +10,7 @@ album: 'Born in the Sunset: Thoughts to Oasis'
 albumLink: 'born-in-the-sunset-thoughts-to-oasis'
 track: '6'
 description: ' '
-artwork: 'https://login.lyricallemonade.com/wp-content/uploads/BITSCover1-scaled.jpg'
+artwork: 'https://file.notion.so/f/s/aa8782a2-7db7-447e-adee-8bfa273e5607/BITSCover1-scaled_(1).jpeg?id=8e18b7a8-a3d1-4371-b3c5-ee544cf9567c&table=block&spaceId=2afffdaa-a1f9-48fc-8af5-a4f4e2aaefbf&expirationTimestamp=1684092207684&signature=IsytBC8rHIB_sPF9O9B25QotIWv1tXoqgEvVKhMEens&downloadName=BITSCover1-scaled+%281%29.jpeg'
 alt: 'song-art'
 spotifyEmbed: 'track/3EbDRSKEdhl8cVVHAL7LId'
 links:
@@ -120,7 +120,7 @@ Life ain't always perfect and that's okay
     <h4>mastered</h4>
     <p>Nicolas de Porcel @ Million Dollar Snare | Sacramento, CA</p>
   </div>
-  
+
   <div className="credit flex-auto flex-grow">
     <h4>recorded</h4>
     <p>The Backwood Apartment</p>
@@ -138,4 +138,3 @@ Life ain't always perfect and that's okay
     <p>ASCAP</p>
   </div>
 </div>
-
