--- a/data/articles/yes.mdx
+++ b/data/articles/yes.mdx
@@ -1,7 +1,7 @@
 ---
 date: '2022-11-07'
 lastEdited: '2022-11-07'
-title: 'jacobs.blue init'
+title: 'AHHHHHh'
 description: 'Why and how I made this version of jacobs dot blue'
 thumbnail: '/miguThumb.png'
 tags: []
@@ -9,7 +9,7 @@ image: ''
 youtube: '_XxKCaopsQc'
 alt: 'gif'
 isPublished: 'true'
-tile: '/design/1.png'
+color: 'bg-whtie'
 ---
 
 670
