--- a/data/design/jb-main-card-updates.mdx
+++ b/data/design/jb-main-card-updates.mdx
@@ -2,7 +2,7 @@
 date: '2024-10-10'
 lastEdited: '2022-10-10'
 title: "Jacob's Blue Card updates"
-description: ' '
+description: 'UI updates to the main component on Jacobs.blue'
 thumbnail: '/tailwindcss-thumbnail.jpg'
 tags: []
 image: ''
@@ -12,40 +12,62 @@ isPublished: 'true'
 tile: '/design/cards.png'
 ---
 
-<div className="flex-block md:flex space-y-3 md:space-y-0 md:space-x-4 not-prose tracking-tight my-4 mb-6 p-6 border border-blue-400 mt-8 bg-blue-50/50 rounded-2xl">
-  <p className="font-mono text-xs flex w-full sm:pt-2 uppercase tracking-tighter text-blue-500">
-    The gist
-  </p>
-  <div className="flex-col flex font-bask">
-    <p className="font-light text-neutral-900">
-      At times I need to be reminded why I started making music in the first
-      place in order to re-route my creativity through the lenses of curiosity,
-      joy and love, the most powerful creative forces.
-    </p>
-    <p className="font-light text-neutral-900">
-      If I acknowledge that working on music everyday and treating my work like
-      a professional is the better route over the long run I run into days where
-      music isn't fun and I forget why I started in the first place. Great work
-      seems to come from a mystical place within myself and for me to stay in
-      touch with that I need to sometimes be reminded why i started in the first
-      place. I need to be reminded to have fun with it and to encourage
-      curiosity and joy and love. I want to craft everything with love and it
-      can be difficult to muster on a daily baiss. I'm feeling this struggle.
-      Part of this mix is absolving pressures I put on myself and not tkaing it
-      seriously and part of it is taking it so seriously that I would treat it
-      like a job. What's the solution here? Tinker with the process? I don't
-      have to be anything at all. I can quit music tomorrow and that will be
-      okay.
-    </p>
-    <p>
-      Or this really just about the fact that I should be able to let it go. The
-      fact that I can't is the problem?
-    </p>
-    <p className="pt-3">
-      <b className="not-prose font-bold">
-        I dont <i>have to</i> make music. I <i>get to</i>
-      </b>
-      .
-    </p>
-  </div>
+If I acknowledge that working on music everyday and treating my work like
+a professional is the better route over the long run I run into days where
+music isn't fun and I forget why I started in the first place. Great work
+seems to come from a mystical place within myself and for me to stay in
+touch with that I need to sometimes be reminded why i started in the first
+place. I need to be reminded to have fun with it and to encourage
+curiosity and joy and love.
+
+I want to craft everything with love and it
+can be difficult to muster on a daily baiss. I'm feeling this struggle.
+Part of this mix is absolving pressures I put on myself and not tkaing it
+seriously and part of it is taking it so seriously that I would treat it
+like a job. What's the solution here? Tinker with the process? I don't
+have to be anything at all. I can quit music tomorrow and that will be
+okay.
+
+{Image ? (
+
+ <div className="relative w-full rounded-2xl border bg-gray-400 overflow-clip aspect-square sm:aspect-video">
+
+    <Image
+      src="/design/1.png"
+      alt="Image"
+      placeholder="blur"
+      blurDataURL="https://jacobs.blue"
+      style={{ objectFit: 'cover' }}
+      fill
+      />
+
 </div>
+) : null}
+
+I want to craft everything with love and it
+can be difficult to muster on a daily baiss. I'm feeling this struggle.
+Part of this mix is absolving pressures I put on myself and not tkaing it
+seriously and part of it is taking it so seriously that I would treat it
+like a job. What's the solution here? Tinker with the process? I don't
+have to be anything at all. I can quit music tomorrow and that will be
+okay.
+
+# Paragraph
+
+I want to craft everything with love and it
+can be difficult to muster on a daily baiss. I'm feeling this struggle.
+Part of this mix is absolving pressures I put on myself and not tkaing it
+seriously and part of it is taking it so seriously that I would treat it
+like a job. What's the solution here? Tinker with the process? I don't
+have to be anything at all. I can quit music tomorrow and that will be
+okay.
+
+## Paragraph
+
+I want to craft everything with love and it
+can be difficult to muster on a daily baiss. I'm feeling this struggle.
+Part of this mix is absolving pressures I put on myself and not tkaing it
+seriously and part of it is taking it so seriously that I would treat it
+like a job. What's the solution here? Tinker with the process? I don't
+have to be anything at all. I can quit music tomorrow and that will be
+okay.
