--- a/data/design/jacobs-blue.mdx
+++ b/data/design/jacobs-blue.mdx
@@ -18,7 +18,7 @@ There are many reasons I do not like being an active user of social media.
 
 {/* The most preverse being the algorithmic incentive structures that fuel these platforms create bad incentives for art. */}
 
-Regardless of my opinion, for any artist trying to share their art with the world the effectiveness of social media as a distribution vehicle is undeniable.
+Regardless of my opinion, for any artist trying to share their art the effectiveness of social media as a distribution vehicle is undeniable.
 So undeniable, that several current major label employees have called me crazy for suggesting there is a path to a maker's commerical success that doesn't involve social media.
 
 {/* But if I dislike being a social media user why should I subject the people that want to listen to my music to the same pain points I feel? --- */}
@@ -31,7 +31,7 @@ Thus, a problem.
 
 To combat this problem I built [jacobs.blue](https://jacobs.blue)
 
-Jacobs.blue provides a home for everything I ever make and a way to easily consume as much as someone may want but no more than they want. There are no other actors vying for site visitors attention. That means you come to jacobs.blue and leave when you want, no longer looking up from your phone 30 min later to realize you've lost 30 mins of your life.
+Jacobs.blue provides a home for everything I ever make and a way to easily consume as much as someone may want but no more than they want. There are no other actors vying for site visitors attention. That means you come to jacobs.blue and leave when you want. no longer looking up from your phone 30 min later to realize you've lost 30 mins of your life.
 
 The only incentive structure that exists is chronoligicality. Meaning whatever was made last is prioritized, not what "performs" the best.
 
