--- a/data/design/songs-seeds.mdx
+++ b/data/design/songs-seeds.mdx
@@ -5,7 +5,7 @@ image: ''
 alt: ''
 date: '2023-07-15'
 lastEdited: '2023-07-15'
-isPublished: 'true'
+isPublished: 'false'
 tile: '/design/seeds.png'
 ---
 
