i literally couldn't tell you

--- a/data/songs/album4.mdx
+++ b/data/songs/album4.mdx
@@ -3,7 +3,7 @@ title: '4'
 artist: "Jacob's Blue"
 produced: 'J. Medure'
 written: 'J. Medure'
-published: 'false'
+published: 'true'
 type: 'album'
 description: 'An album about the sunset'
 released: '2020-12-31'
