--- a/data/songs/hard-of-hearing.mdx
+++ b/data/songs/hard-of-hearing.mdx
@@ -10,8 +10,7 @@ album: 'Born in the Sunset: Thoughts to Oasis'
 albumLink: 'born-in-the-sunset-thoughts-to-oasis'
 track: '1'
 description: ' '
-artwork: 'https://file.notion.so/f/s/aa8782a2-7db7-447e-adee-8bfa273e5607/BITSCover1-scaled_(1).jpeg?id=8e18b7a8-a3d1-4371-b3c5-ee544cf9567c&table=block&spaceId=2afffdaa-a1f9-48fc-8af5-a4f4e2aaefbf&expirationTimestamp=1684092207684&signature=IsytBC8rHIB_sPF9O9B25QotIWv1tXoqgEvVKhMEens&downloadName=BITSCover1-scaled+%281%29.jpeg'
-
+artwork: '/BITS.jpeg'
 alt: 'song-art'
 spotifyEmbed: 'track/7z19aMKlIaGNB3GfUmj6M2'
 links:
