--- a/data/songs/album3.mdx
+++ b/data/songs/album3.mdx
@@ -3,7 +3,7 @@ title: '3'
 artist: "Jacob's Blue"
 produced: 'J. Medure'
 written: 'J. Medure'
-published: 'true'
+published: 'false'
 type: 'album'
 description: 'An album about the sunset'
 released: '2020-12-31'
