--- a/data/articles/means-to-an-end.mdx
+++ b/data/articles/means-to-an-end.mdx
@@ -1,8 +1,8 @@
 ---
 date: '2023-07-26'
 lastEdited: '2023-07-26'
-title: 'Means to an end Means to an end Means to an end Means to an end'
-description: 'For how long?'
+title: 'Means to an end'
+description: ''
 thumbnail: ''
 tags: []
 image: ''
@@ -14,7 +14,7 @@ toc: ['job-hunt', 'continued', 'my-next-role']
 
 After a year spent working at Jungle City Studios in Manhattan, NY I reached a point of diminishing returns. I simultaneously realized that I did _not_ want to be an engineer.
 
-If I stayed on this route without correcting, I would most definitely become one.
+If I stayed on this route without [correcting,](https://jacobs.blue) I would most definitely become one.
 
 Around the same time I was consistently being approached by others from the studio to contract cover art. Before I knew it I had a portfolio of work and this is where the turning point came.
 
