--- a/data/articles/maybe-i-give-up.mdx
+++ b/data/articles/maybe-i-give-up.mdx
@@ -2,24 +2,25 @@
 date: '2022-11-07'
 lastEdited: '2022-11-07'
 title: 'Maybe I give up.'
-description: "670 days since I released music."
+description: '670 days since I released music.'
 thumbnail: '/miguThumb.png'
 tags: []
 image: ''
 youtube: '_XxKCaopsQc'
 alt: 'gif'
 isPublished: 'true'
+toc: []
 ---
 
 670
 
 The number of days since I’ve shared new music with you.
 1 year 10 months and 8 days of battling my perfectionism and my will to create with care.
-Making sure whatever came next not only met but raised the bar I set for myself with *[Born in The Sunset](/songs/born-in-the-sunset-thoughts-to-oasis)*.   
+Making sure whatever came next not only met but raised the bar I set for myself with _[Born in The Sunset](/songs/born-in-the-sunset-thoughts-to-oasis)_.
 
-When I dropped Born in the Sunset I got [a lot more coverage](https://freegame.notion.site/Jacob-s-Blue-Press-Kit-79b4480312224328954dea767579cd5a) than expected. It was great to feel recognized but every interviewer had one question as we closed:  
+When I dropped Born in the Sunset I got [a lot more coverage](https://freegame.notion.site/Jacob-s-Blue-Press-Kit-79b4480312224328954dea767579cd5a) than expected. It was great to feel recognized but every interviewer had one question as we closed:
 
->"What’s next?"
+> "What’s next?"
 
 I didn’t have an answer then. Didn’t they realize all that I had been through? how deeply I dug within myself, no matter how excruciating, to create this project? A global pandemic. Losing all of my gear and having to buy anew. Forced to move back home and make music out of a closet with no windows. 35 songs down to 7. A short-film reduced to a [script and a website](https://web.archive.org/web/20220730230234/https://jacobs.blue/).
 
@@ -29,19 +30,19 @@ The last 2 years have been a deconstruction and rebuilding from scratch of my cr
 
 Taking one step back, I’m just a guy that likes to make songs and share them with others. If that’s true, then it’s time I share.
 
-*[Maybe I Give Up](/songs/maybe-i-give-up)* is a reminder not to. But it’s also a reminder that I don’t have to be anything at all. That I am just a man and I do just make songs and that’s okay.
+_[Maybe I Give Up](/songs/maybe-i-give-up)_ is a reminder not to. But it’s also a reminder that I don’t have to be anything at all. That I am just a man and I do just make songs and that’s okay.
 
-This song is the manifestation of overcoming perfectionism. I told myself before I sat down to make this song that I would release it no matter what. Most songs at this point in my creative process are not even good. My hit rate is somewhere 2/10? I had zero preconception of what would come of it. So I had to trust myself to create something worth releasing. That was hard but good for me. I love what it stands for despite feeling good, not great, about the actual music. 
+This song is the manifestation of overcoming perfectionism. I told myself before I sat down to make this song that I would release it no matter what. Most songs at this point in my creative process are not even good. My hit rate is somewhere 2/10? I had zero preconception of what would come of it. So I had to trust myself to create something worth releasing. That was hard but good for me. I love what it stands for despite feeling good, not great, about the actual music.
 
->A good song done and released to the world is better than a great song that’s incomplete and taking up space on my computer.
+> A good song done and released to the world is better than a great song that’s incomplete and taking up space on my computer.
 
 Through practice, I'm growing and learning, sometimes re-learning every day. Lately, I've been remembering that two things seemingly opposed can be true:
+
 - it's good to make with tenderness and care in all I do
 - it's good to try not to be too precious with my creations.
 
-<br/>
---
+## <br/>
 
-Listen and read along to *[Maybe I give up.](/songs/maybe-i-give-up)* here.
+Listen and read along to _[Maybe I give up.](/songs/maybe-i-give-up)_ here.
 
 Thank you for listening.
