--- a/data/articles/means-to-an-end.mdx
+++ b/data/articles/means-to-an-end.mdx
@@ -5,7 +5,7 @@ title: 'Means to an end'
 description: ''
 thumbnail: ''
 tags: []
-image: ''
+image: '/migu.jpg'
 youtube: ''
 alt: ''
 isPublished: 'true'
@@ -42,7 +42,7 @@ I've actually come to value the allevation of pressure for my music to succeed t
 
 All in all it seems my ideal life is actually just a series of ideal days stacked in perpetuity. I'm not crticizing myself for the approach I've taken. It has it's own advantages and drawbacks. However, I think I'm over anything as a means to an end. I think I should just have a great day. Not sacrifice until my days are great.
 
-### [job hunt](#job-hunt)
+### Job hunt
 
 I've been pulling my portfolio together in preparation for my next job. When I look back on the design work I've done the only work I'm truly proud of is work I've done myself.
 
@@ -56,7 +56,7 @@ So moving forward...how might I look at myself for all the value I bring to the 
 
 Music is something I will always do. It's part of me and something I will do with or without an audience. I will continue to pursue a career as a recording artist for as long as I am able. In the meantime, becuase I have no idea how long the meantime will be, I'll no longer compromise who I am or what I think is valuable or good for 8 hours a day. My promise to my self, my family, and all those that love me is I won't accept less than I feel capable of in my next role.
 
-### [Continued](#continued)
+### Continued
 
 When I was recording the podcast weekly with Will we had a talk about what it is we want to want. It spurred a couple of longer journal sessions regarding what we want out of life in many facets. At one point I wrote down everything I wanted in a potential partner, as explicitly as I could. I filled up three pages.
 
@@ -66,7 +66,7 @@ I met Gena about 6 months after writing that entry. After a couple months of dat
 
 I share that story becuase I think it's valuable fodder for the practice of outlining what I want out of my next role.
 
-### [My next role](#my-next-role)
+### My next role
 
 I want a role that:
 
