--- a/data/articles/maybe-i-give-up.mdx
+++ b/data/articles/maybe-i-give-up.mdx
@@ -20,7 +20,7 @@ Making sure whatever came next not only met but raised the bar I set for myself 
 
 When I dropped Born in the Sunset I got [a lot more coverage](https://freegame.notion.site/Jacob-s-Blue-Press-Kit-79b4480312224328954dea767579cd5a) than expected. It was great to feel recognized but every interviewer had one question as we closed:
 
-> "What’s next?"
+> What’s next?
 
 I didn’t have an answer then. Didn’t they realize all that I had been through? how deeply I dug within myself, no matter how excruciating, to create this project? A global pandemic. Losing all of my gear and having to buy anew. Forced to move back home and make music out of a closet with no windows. 35 songs down to 7. A short-film reduced to a [script and a website](https://web.archive.org/web/20220730230234/https://jacobs.blue/).
 
