Library going nutso

--- a/data/articles/10-percent.mdx
+++ b/data/articles/10-percent.mdx
@@ -1,6 +1,6 @@
 ---
-date: '2023-10-13'
-lastEdited: '2023-10-13'
+date: '2022-10-13'
+updated: '2023-10-13'
 title: '10%'
 description: ''
 thumbnail: ''
