--- a/data/articles/jb-a.mdx
+++ b/data/articles/jb-a.mdx
@@ -1,6 +1,6 @@
 ---
 date: '2022-11-07'
-lastEdited: '2022-11-07'
+updated: '2022-11-07'
 title: 'jacobs.blue init'
 description: 'Why and how I made this version of jacobs.blue'
 thumbnail: '/miguThumb.png'
