--- a/data/articles/means-to-an-end.mdx
+++ b/data/articles/means-to-an-end.mdx
@@ -1,11 +1,11 @@
 ---
 date: '2023-07-26'
-lastEdited: '2023-07-26'
+updated: '2023-10-19'
 title: 'Means to an end'
 description: ''
 thumbnail: ''
 tags: []
-image: '/migu.jpg'
+image: ''
 youtube: ''
 alt: ''
 isPublished: 'true'
