--- a/data/articles/orchids.mdx
+++ b/data/articles/orchids.mdx
@@ -1,6 +1,6 @@
 ---
 date: '2022-10-10'
-lastEdited: '2022-10-10'
+updated: '2022-10-10'
 title: Tomorrow, I'm allowed to love orchids.
 description: ' '
 thumbnail: '/tailwindcss-thumbnail.jpg'
@@ -11,25 +11,51 @@ alt: 'gif'
 isPublished: 'false'
 ---
 
-
 <div className="flex-block md:flex space-y-3 md:space-y-0 md:space-x-4 not-prose tracking-tight my-4 mb-6 p-6 border border-blue-400 mt-8 bg-blue-50/50 rounded-2xl">
-    <p className="font-mono text-xs flex w-full sm:pt-2 uppercase tracking-tighter text-blue-500">The gist</p>
-    <div className="flex-col flex font-bask">
-        <p className="font-light text-neutral-900">At times I need to be reminded why I started making music in the first place in order to re-route my creativity through the lenses of curiosity, joy and love, the most powerful creative forces.</p>
-        <p className="font-light text-neutral-900">If I acknowledge that working on music everyday and treating my work like a professional is the better route over the long run I run into days where music isn't fun and I forget why I started in the first place. Great work seems to come from a mystical place within myself and for me to stay in touch with that I need to sometimes be reminded why i started in the first place. I need to be reminded to have fun with it and to encourage curiosity and joy and love. I want to craft everything with love and it can be difficult to muster on a daily baiss. I'm feeling this struggle. Part of this mix is absolving pressures I put on myself and not tkaing it seriously and part of it is taking it so seriously that I would treat it like a job. What's the solution here? Tinker with the process? I don't have to be anything at all. I can quit music tomorrow and that will be okay.</p>
-        <p>Or this really just about the fact that I should be able to let it go. The fact that I can't is the problem?</p>
-        <p className="pt-3"><b className="not-prose font-bold">I dont <i>have to</i> make music. I <i>get to</i></b>.</p>
-    </div>
+  <p className="font-mono text-xs flex w-full sm:pt-2 uppercase tracking-tighter text-blue-500">
+    The gist
+  </p>
+  <div className="flex-col flex font-bask">
+    <p className="font-light text-neutral-900">
+      At times I need to be reminded why I started making music in the first
+      place in order to re-route my creativity through the lenses of curiosity,
+      joy and love, the most powerful creative forces.
+    </p>
+    <p className="font-light text-neutral-900">
+      If I acknowledge that working on music everyday and treating my work like
+      a professional is the better route over the long run I run into days where
+      music isn't fun and I forget why I started in the first place. Great work
+      seems to come from a mystical place within myself and for me to stay in
+      touch with that I need to sometimes be reminded why i started in the first
+      place. I need to be reminded to have fun with it and to encourage
+      curiosity and joy and love. I want to craft everything with love and it
+      can be difficult to muster on a daily baiss. I'm feeling this struggle.
+      Part of this mix is absolving pressures I put on myself and not tkaing it
+      seriously and part of it is taking it so seriously that I would treat it
+      like a job. What's the solution here? Tinker with the process? I don't
+      have to be anything at all. I can quit music tomorrow and that will be
+      okay.
+    </p>
+    <p>
+      Or this really just about the fact that I should be able to let it go. The
+      fact that I can't is the problem?
+    </p>
+    <p className="pt-3">
+      <b className="not-prose font-bold">
+        I dont <i>have to</i> make music. I <i>get to</i>
+      </b>
+      .
+    </p>
+  </div>
 </div>
 
+[Simone Giertz](https://www.youtube.com/c/simonegiertz) is a successful Youtuber, creative, and story-teller. I recently listened to her talk about how she tells herself that if she wakes up tomorrow and thinks “Orchids! I love orchids and I just need to make videos about orchids,” she’ll just do that and that it’s “_okay_”.
 
-[Simone Giertz](https://www.youtube.com/c/simonegiertz) is a successful Youtuber, creative, and story-teller. I recently listened to her talk about how she tells herself that if she wakes up tomorrow and thinks “Orchids! I love orchids and I just need to make videos about orchids,” she’ll just do that and that it’s “*okay*”. 
-
-Despite her well-established creative career (my main goal rn), she tells herself she doesn’t have to do any of it. 
+Despite her well-established creative career (my main goal rn), she tells herself she doesn’t have to do any of it.
 
 Her rationale resonates with me. I’ve realized that I put incredible amounts of pressure on myself to see projects through, not only to completion but to perfection. Throughout the years as I learn to better sustain my creative effort, my measures of success have grown more central to things I can control. Mostly, my effort. Measures like “did I give my best?”, and “how often did I show up?”. Although, I’ve mostly removed an outside pressure that I’ve known many other artists to struggle with, I’m not absolved from the sometimes stifling pressure I put on myself.
 
-Generally, I’m in favor of pressure. Deadlines for example, are a common pressure that have at times been fruitful when incorporated tactfully throughout my creative process. That’s the thing though. It takes a master level understanding of how to add and remove pressure at certain points throughout the creative process in order to bare fruit and not smother seeds before they have a chance to grow. 
+Generally, I’m in favor of pressure. Deadlines for example, are a common pressure that have at times been fruitful when incorporated tactfully throughout my creative process. That’s the thing though. It takes a master level understanding of how to add and remove pressure at certain points throughout the creative process in order to bare fruit and not smother seeds before they have a chance to grow.
 
 I’m content to take my time understanding my relationship with pressure but I think Simone touches something really special here. The removal of a specific kind of pressure. The high level pressure to be anything at all.
 
@@ -38,21 +64,22 @@ When I first started in music I was full of curiosity. I knew so little. Music w
 - Curiosity breeds creativity. Creativity is the lifeblood of any creative’s work, thus it’s essential I protect and hone it the best I can. That is not to say pain, sorrow, strong dislike, and many other impassioned emotions don’t have a place in fueling creativity. I’ve made the a lot of [what I consider to be great art through catharsis](link to born in the sunset). However, considering I want to make a career out of my art and I similarly would not like to be sad all the time I have done a lot of work to reorient my source of fuel to more positive feelings. Feelings of wonder, joy, and love.
 
 - There is a necessary freedom to the earliest parts of making a song. I need to be able to consistently let my mind wonder, to let myself explore without convergence. There is a time for convergence around the ideas I make but it’s not at the beginning.
-    - Music like many other creatives done best follows and arc of divergent thinking at the beginning to ruthless convergent thinking by the end. I have to think as wide as I possibly can at the beginning and by the end I need to be able to cut as much of the fat as possible in order to get to the core of my idea. This is true in all creative fields I’ve pursued; music, design, and writing.
-    
+  - Music like many other creatives done best follows and arc of divergent thinking at the beginning to ruthless convergent thinking by the end. I have to think as wide as I possibly can at the beginning and by the end I need to be able to cut as much of the fat as possible in order to get to the core of my idea. This is true in all creative fields I’ve pursued; music, design, and writing.
+
 I believe her because I don’t do this well.
 
 After reading the [War of Art by Steven Pressfield](link) I started working as consistently as possible. Treating my passion more like a duty. Although I think this is generally a good thing, I often feel like my discipline and creativity are at odds. Somedays I feel like I have to do music. Although that keeps my technical ability sharp, I don’t think it’s always keeping my creation light or fun. At times, my process can feel heavy, stuffy, forced.
 
 - I more or less think these two things are naturally opposed but also both necessary. The trick to doing what I love as a career is balancing these ideas.
 
->I’m freeing **myself today. I no longer *have* to make music.** I no longer *have* to make anything. It is okay if I don’t make it in music.
+> I’m freeing **myself today. I no longer _have_ to make music.** I no longer _have_ to make anything. It is okay if I don’t make it in music.
 
 Although I’m not sure I believe myself when I say that quite yet, I do believe that freeing myself from having to do anything will allow me to listen more intently to that which peaks my curiosity. Consequently, the things that peak my curiosity, will be explored with renewed fervor and wonder.
 
 There is no question that Steven is right in his War of Art approach but Simone is also right to take herself not so seriously and to not force things.
 
-The question remains: How do I balance showing up as consistently as possible while also releasing myself from the pressure of having to work. 
+The question remains: How do I balance showing up as consistently as possible while also releasing myself from the pressure of having to work.
+
 - the perspective of I get to vs I have to is crucial.
 - Listening more intently to when I need rest vs when I just am not inspired
 - Creating a rough schedule to give myself constraints for the day intended to move things along
@@ -60,6 +87,6 @@ The question remains: How do I balance showing up as consistently as possible wh
 - And taking any disciplined approach I come up with a grain of salt, treating myself with compassion on days where I don’t quite meet the mark
 - Reaffirm I don’t have to do anything at all.
 
-I’ve wanted to be a professional recording artist since I was 17 years old. I’m 24. When you want something so bad and strive for so long it can be difficult to remember the pure nature of why you started in the first place.  It’s a shame this happens but it’s also totally normal. It’s my belief that pure creativity, wonder, curiosity and joy are the vectors by which great things are made. Gentle reminders like Simone’s offered to have fun and to not take things so serious and that I don’t have to do any of it at all, that I actually get to, that I choose to are incredibly timely and fruitful. Thank you Simone 
+I’ve wanted to be a professional recording artist since I was 17 years old. I’m 24. When you want something so bad and strive for so long it can be difficult to remember the pure nature of why you started in the first place. It’s a shame this happens but it’s also totally normal. It’s my belief that pure creativity, wonder, curiosity and joy are the vectors by which great things are made. Gentle reminders like Simone’s offered to have fun and to not take things so serious and that I don’t have to do any of it at all, that I actually get to, that I choose to are incredibly timely and fruitful. Thank you Simone
 
 I don’t have to make music. I get to.
