--- a/data/songs/maybe-i-give-up.mdx
+++ b/data/songs/maybe-i-give-up.mdx
@@ -10,7 +10,7 @@ album: ''
 albumLink: ''
 description: ''
 track: '0'
-artwork: '/migu.jpg'
+artwork: '/cover-art/migu.jpg'
 alt: 'song-art'
 spotifyEmbed: 'album/3uVdTPnjj6XZOIOdsDOVbj'
 links:
