--- a/data/articles/creative-constraints.mdx
+++ b/data/articles/creative-constraints.mdx
@@ -1,8 +1,8 @@
 ---
 date: '2023-10-23'
-lastEdited: '2022-05-24'
+updated: '2022-05-24'
 title: 'On Creative Constraints'
-description: "Creative contraints throughout the creative process in the pursuit of mastery"
+description: 'Creative contraints throughout the creative process in the pursuit of mastery'
 thumbnail: '/1.gif'
 tags: []
 image: '/1.gif'
