--- a/data/articles/maybe-i-give-up.mdx
+++ b/data/articles/maybe-i-give-up.mdx
@@ -1,6 +1,6 @@
 ---
 date: '2022-11-07'
-lastEdited: '2022-11-07'
+updated: '2022-11-07'
 title: 'Maybe I give up.'
 description: '670 days since I released music.'
 thumbnail: '/miguThumb.png'
