--- a/data/articles/zero-inspiration-list.mdx
+++ b/data/articles/zero-inspiration-list.mdx
@@ -1,6 +1,6 @@
 ---
 date: '2022-10-13'
-lastEdited: '2022-10-13'
+updated: '2022-10-13'
 title: '0 Inspiration List'
 description: "A list of things to do when you don't feel like doing anything at all."
 thumbnail: '/1.gif'
