--- a/data/songs/b-sides.mdx
+++ b/data/songs/b-sides.mdx
@@ -7,12 +7,13 @@ written: 'J. Medure'
 produced: 'J. Medure'
 released: '2023-12-31'
 album: 'Born in the Sunset: Thoughts to Oasis - B-SIDES'
-albumLink: ' '
+albumLink: ''
 description: 'An album about the sunset'
-track: ' '
+track: ''
 artwork: '/cover-art/bsides.jpg'
 alt: 'song-art'
 spotifyEmbed: 'album/3nAER17uMf2QOuJwSCIOJB'
+explicit: 'e'
 links:
   [
     'https://open.spotify.com/album/3nAER17uMf2QOuJwSCIOJB?si=hS-He9BwRomfBTJPv9FKww&nd=1',
