--- a/data/songs/born-in-the-sunset-thoughts-to-oasis.mdx
+++ b/data/songs/born-in-the-sunset-thoughts-to-oasis.mdx
@@ -9,10 +9,11 @@ released: '2020-12-31'
 album: 'Born in the Sunset: Thoughts to Oasis'
 albumLink: ' '
 description: 'An album about the sunset'
-track: ' '
-artwork: '/BITS.jpeg'
-alt: 'song-art'
+track: ''
+artwork: '/cover-art/BITS.jpg'
+alt: 'song art'
 spotifyEmbed: 'album/3nAER17uMf2QOuJwSCIOJB'
+explicit: 'E'
 links:
   [
     'https://open.spotify.com/album/3nAER17uMf2QOuJwSCIOJB?si=hS-He9BwRomfBTJPv9FKww&nd=1',
@@ -20,6 +21,7 @@ links:
     'https://www.youtube.com/watch?v=Ewko6noMLCU&list=OLAK5uy_nryvazk8OLLzaongCwezLMDuJ4lvK4mec',
     'https://music.amazon.com/albums/B08RGD1X5Q',
     'https://listen.tidal.com/album/167571026',
+    'https://soundcloud.com/jacobsblue/sets/born-in-the-sunset-thoughts-to-oasis?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing',
   ]
 ---
 
