--- a/data/songs/medi.mdx
+++ b/data/songs/medi.mdx
@@ -7,12 +7,13 @@ written: 'J. Medure'
 produced: 'J. Medure'
 released: '2022-07-31'
 album: ''
-albumLink: ' '
+albumLink: ''
 track: ' '
 description: ' yes'
 artwork: '/1.gif'
-alt: 'song-art'
+alt: 'song art'
 spotifyEmbed: 'track/7z19aMKlIaGNB3GfUmj6M2'
+explicit: 'true'
 links:
   [
     'https://spotify.com',
